:wrench:Fix scrollbar on galleryview when there are no images thumbnail images now cover fix to 'load more' breaking when deleting images

--- a/public/src/styles/cms.scss
+++ b/public/src/styles/cms.scss
@@ -1,4 +1,12 @@
 .cms {
+    .AssetAdmin {
+    	.cms-content-fields {
+    		.cms-edit-form.AssetAdmin {
+    			overflow-y: visible;
+    		}
+        }
+    }
+
     .ss-uploadfield-view-allowed-extensions {
         margin-top: 0;
         top: -42px;
